# tech-week-32

ai-diagnosis/: API_CONTRACT.md  DEPLOYMENT.md  Dockerfile  docker-compose.yml
ai-diagnosis/api/: README.md  main.py  pyproject.toml
ai-diagnosis/api/routes/: __init__.py  database.py  health_analysis.py  llm.py  mcp.py  sample_data.json  sensor_diagnostics.py  setup.py
ai-diagnosis/api/services/: database.py  embeddings.py  llm.py  models.py  prompt.py  setup_database.py
ai-diagnosis/api/vector_store/engineering-bearing_-_sensor_mounting_position-180925-195452/: index.faiss  index.pkl
ai-diagnosis/postgres/: Dockerfile  init.sql
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DiagnosisModal.tsx  SensorTable.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: DiagnosisPage.tsx  Index.tsx  PdfViewer.tsx
