[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "faiss-cpu==1.8.0.post1",
    "fastapi==0.115.11",
    "httpx==0.27.2",
    "langchain-community==0.2.17",
    "langchain-google-genai==1.0.10",
    "langchain-openai==0.1.23",
    "langchain-text-splitters==0.2.4",
    "mcp>=1.0.0",
    "openai==1.51.2",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.10.6",
    "pypdf==4.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart==0.0.9",
    "sqlalchemy>=2.0.43",
    "uvicorn==0.34.0",
]

